Upgrade to JDK11